--- a/styles.scss
+++ b/styles.scss
@@ -1,54 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Montserrat+Alternates|Do+Hyeon|Roboto+Mono|Lora:400,700');
 
-//2
-@font-face {
-    font-family: "Technik";
-    src: url("../fonts/Amosis Technik.ttf");
-}
-//all caps
-@font-face {
-    font-family: "Slash";
-    src: url("../fonts/Slash.ttf");
-}
-//all caps
-@font-face {
-    font-family: "Metal";
-    src: url("../fonts/Metal.ttf");
-}
-//2
-@font-face {
-    font-family: "Hexter";
-    src: url("../fonts/Hexter.ttf");
-}
-//1
 @font-face {
     font-family: "Cuadradex";
-    src: url("../fonts/Cuadradex.ttf");
-}
-//good, but all caps
-@font-face {
-    font-family: "Noise";
-    src: url("../fonts/Background Noise.otf");
-}
-//good, but all caps
-@font-face {
-    font-family: "Diagon";
-    src: url("../fonts/Diagon.otf");
-}
-//all caps
-@font-face {
-    font-family: "Hippo";
-    src: url("../fonts/Hippo.otf");
-}
-//?
-@font-face {
-    font-family: "Hexagonia";
-    src: url("../fonts/Hexagonia.ttf");
-}
-//2
-@font-face {
-    font-family: "Juliette";
-    src: url("../fonts/Juliette.ttf");
+    src: url("fonts/Cuadradex.ttf");
+  //C:\Users\Admin\Google Drive\PortfolioProject\RGB_Game\fonts\Cuadradex.ttf
 }
 $HEATWAVE: #FF7E5F;
 $TROPICALPINK: #F5AB99;
