--- a/styles.scss
+++ b/styles.scss
@@ -1,96 +1,96 @@
+/*
+font-family: 'Montserrat Alternates', sans-serif;
+HEATWAVE = "#FF7E5F";
+PARADISE = "#765285";
+NIGHTFALL = "#351C4D";
+TROPICALPINK = "#F5AB99";
+*/
 @import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates:400,700');
 
 @font-face {
     font-family: "Cuadradex";
     src: url("fonts/Cuadradex.ttf");
 }
+$NIGHTFALL: #351C4D;
+$PARADISE: #765285;
 $HEATWAVE: #FF7E5F;
 $TROPICALPINK: #F5AB99;
 $LSpace: .1rem;
- /*
- font-family: 'Montserrat Alternates', sans-serif;
- HEATWAVE = "#FF7E5F";
- PARADISE = "#765285";
- NIGHTFALL = "#351C4D";
- TROPICALPINK = "#F5AB99";
- */
+$embase: 62.5%;
+
 html{
     background-color: $HEATWAVE;
     font-family: 'Montserrat Alternates', sans-serif;
+    font-size: $embase;
 }
-header{
-    background-color: $HEATWAVE;
-    color: #351C4D;
+body{
+    font-size: 1.4em;
+    margin: 0;
+}
+#tempHeader{
+    color: $NIGHTFALL;
     text-align: center;
     font-family: "Cuadradex", sans-serif;
     letter-spacing: $LSpace;
+    font-size: 1.3em;
+    margin-top: .5em;
 }
 #colorDisplay{
-    font-size: 200%;
     font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 2.5em;
 }
 #stripe{
-    background-color: #351C4D;
+    background-color: $NIGHTFALL;
     height: 30px;
     text-align: center;
     font-family: 'Montserrat Alternates', sans-serif;
 }
-h1.HierHeader {
-    font-size: 4em;
-    color: #351C4D;
-    background-color: $HEATWAVE;
-    margin: 1vh auto;
-    font-family: "Cuadradex", sans-serif;
-    letter-spacing: $LSpace;
+#tempPageTitle{
+    font-size: 3.0em;
 }
-h2.HierHeader {
-    font-family: 'Cuadradex', sans-serif;
-    margin-top: 1vh;
-    margin-bottom:  1vh;
-    letter-spacing: $LSpace;
+#tempAuthor{
+  font-size: 2.0em;
+  margin-top: .5em;
 }
-body{
-    margin: 0;
-}
-table.HierHeader{
+#tempLogoTable{
     width: 100%;
     border: none;
 }
-table.HierHeader td.left {
+#tempLogoTableLeft {
     width: 45%;
     padding-left: 5%;
     padding-top: 30px;
 }
-table.HierHeader td.right {
+#tempLogoTableRight {
     width: 45%;
     padding-right: 5%;
     padding-top: 30px;
 }
-table.HierHeader td hr.flared {
+hr.flared {
     height: 30px;
     border-style: solid;
-    border-color: #351C4D;
+    border-color: $NIGHTFALL;
     border-width: 3px 0 0 0;
     border-radius: 20px;
     overflow: visible;
 }
-table.HierHeader td hr.flared:before {
+hr.flared:before {
     display: block;
     content: "";
     height: 30px;
     margin-top: -33px;
     border-style: solid;
-    border-color: #351C4D;
+    border-color: $NIGHTFALL;
     border-width: 0 0 3px 0;
     border-radius: 20px;
 }
-table.HierHeader td.center{
+#tempLogoTableCenter{
     width: 10%;
 }
-table.HierHeader td.center img.logoImg{
-    width: 5vmax;
+#logoImg{
+    width: 4vmax;
+    height: auto;
 }
-
 .square{
     width: 30%;
     padding-bottom: 30%;
@@ -115,11 +115,6 @@ table.HierHeader td.center img.logoImg{
 span{
     color: white;
 }
-/*#stripe{*/
-    /*background-color: #351C4D;*/
-    /*height: 30px;*/
-    /*text-align: center;*/
-/*}*/
 #message{
     color: $TROPICALPINK;
     display: inline-block;
@@ -129,10 +124,6 @@ span{
     color: white;
     background-color: $TROPICALPINK;
 }
-/*#colorDisplay{*/
-    /*font-size: 200%;*/
-    /*font-family: 'Montserrat Alternates', sans-serif;*/
-/*}*/
 button{
     border: none;
     background: none;
