Set the logoImg to 3.5vmax

--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,7 @@ TROPICALPINK = "#F5AB99";
 $NIGHTFALL: #351C4D;
 $PARADISE: #765285;
 $HEATWAVE: #FF7E5F;
+$SUNSET: #FEB47B;
 $TROPICALPINK: #F5AB99;
 $LSpace: .1rem;
 $embase: 62.5%;
@@ -88,7 +89,7 @@ hr.flared:before {
     width: 10%;
 }
 #logoImg{
-    width: 4vmax;
+    width: 3.5vmax;
     height: auto;
 }
 .square{
