--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,43 @@ body {
   letter-spacing: 0.1rem;
   font-size: 1.3em;
   margin-top: .5em; }
+  #tempHeader #tempPageTitle {
+    font-size: 3.0em; }
+  #tempHeader #tempAuthor {
+    font-size: 2.0em;
+    margin-top: .5em; }
+  #tempHeader #tempLogoTable {
+    width: 100%;
+    border: none; }
+    #tempHeader #tempLogoTable #tempLogoTableLeft {
+      width: 45%;
+      padding-left: 5%;
+      padding-top: 30px; }
+    #tempHeader #tempLogoTable #tempLogoTableCenter {
+      width: 10%; }
+      #tempHeader #tempLogoTable #tempLogoTableCenter #logoImg {
+        width: 3.5vmax;
+        height: auto; }
+    #tempHeader #tempLogoTable #tempLogoTableRight {
+      width: 45%;
+      padding-right: 5%;
+      padding-top: 30px; }
+    #tempHeader #tempLogoTable hr.flared {
+      height: 30px;
+      border-style: solid;
+      border-color: #351C4D;
+      border-width: 3px 0 0 0;
+      border-radius: 20px;
+      overflow: visible; }
+    #tempHeader #tempLogoTable hr.flared:before {
+      display: block;
+      content: "";
+      height: 30px;
+      margin-top: -33px;
+      border-style: solid;
+      border-color: #351C4D;
+      border-width: 0 0 3px 0;
+      border-radius: 20px; }
 
 #colorDisplay {
   font-family: "Montserrat Alternates", sans-serif;
@@ -35,52 +72,6 @@ body {
   height: 30px;
   text-align: center;
   font-family: "Montserrat Alternates", sans-serif; }
-
-#tempPageTitle {
-  font-size: 3.0em; }
-
-#tempAuthor {
-  font-size: 2.0em;
-  margin-top: .5em; }
-
-#tempLogoTable {
-  width: 100%;
-  border: none; }
-
-#tempLogoTableLeft {
-  width: 45%;
-  padding-left: 5%;
-  padding-top: 30px; }
-
-#tempLogoTableRight {
-  width: 45%;
-  padding-right: 5%;
-  padding-top: 30px; }
-
-hr.flared {
-  height: 30px;
-  border-style: solid;
-  border-color: #351C4D;
-  border-width: 3px 0 0 0;
-  border-radius: 20px;
-  overflow: visible; }
-
-hr.flared:before {
-  display: block;
-  content: "";
-  height: 30px;
-  margin-top: -33px;
-  border-style: solid;
-  border-color: #351C4D;
-  border-width: 0 0 3px 0;
-  border-radius: 20px; }
-
-#tempLogoTableCenter {
-  width: 10%; }
-
-#logoImg {
-  width: 3.5vmax;
-  height: auto; }
 
 .square {
   width: 30%;
