Split the stylesheet into three files: 1) globalVariables: containing references to the fonts and colors 2) templateProjectPageHeader: containing all the styles for the header template of every page in this project. Imports globalVariables. 3) styles: a much reduced stylesheet at this point. Imports templateProjectPageHeader.

--- a/templateProjectPageHeader.css
+++ b/templateProjectPageHeader.css
@@ -47,73 +47,4 @@
       border-width: 0 0 3px 0;
       border-radius: 20px; }
 
-html {
-  background-color: #FF7E5F;
-  font-family: "Montserrat Alternates", sans-serif;
-  font-size: 62.5%; }
-
-body {
-  font-size: 1.4em;
-  margin: 0; }
-
-#colorDisplay {
-  font-family: "Montserrat Alternates", sans-serif;
-  font-size: 2.5em; }
-
-#stripe {
-  background-color: #351C4D;
-  height: 30px;
-  text-align: center;
-  font-family: "Montserrat Alternates", sans-serif; }
-
-.square {
-  width: 30%;
-  padding-bottom: 30%;
-  float: left;
-  margin: 1.66%;
-  border-radius: 15%;
-  transition: background 0.5s; }
-
-#squareContainer {
-  max-width: 600px;
-  margin: 20px auto; }
-
-.mainContent h1 {
-  color: white;
-  text-align: center;
-  margin: 0;
-  font-weight: normal;
-  text-transform: uppercase;
-  line-height: 1.1;
-  padding: 20px 0; }
-
-span {
-  color: white; }
-
-#message {
-  color: #F5AB99;
-  display: inline-block;
-  width: 20%; }
-
-.selected {
-  color: white;
-  background-color: #F5AB99; }
-
-button {
-  border: none;
-  background: none;
-  text-transform: uppercase;
-  height: 100%;
-  font-weight: 700;
-  color: #F5AB99;
-  letter-spacing: 1px;
-  font-size: inherit;
-  transition: all 0.3s;
-  outline: none;
-  font-family: "Montserrat Alternates", sans-serif; }
-
-button:hover {
-  color: white;
-  background-color: #F5AB99; }
-
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=templateProjectPageHeader.css.map */
