--- a/styles.scss
+++ b/styles.scss
@@ -1,26 +1,4 @@
-/*
-font-family: 'Montserrat Alternates', sans-serif;
-HEATWAVE = "#FF7E5F";
-PARADISE = "#765285";
-NIGHTFALL = "#351C4D";
-TROPICALPINK = "#F5AB99";
-*/
-@import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates:400,700');
-
-@font-face {
-    font-family: "Cuadradex";
-    src: url("fonts/Cuadradex.ttf");
-}
-$NIGHTFALL: #351C4D;
-$PARADISE: #765285;
-$HEATWAVE: #FF7E5F;
-$SUNSET: #FEB47B;
-$TROPICALPINK: #F5AB99;
-$LSpace: .1rem;
-$embase: 62.5%;
-$fontBody: 'Montserrat Alternates', sans-serif;
-$fontHeadings: "Cuadradex", sans-serif;
-
+@import "templateProjectPageHeader.scss";
 html{
     background-color: $HEATWAVE;
     font-family: $fontBody;
@@ -29,63 +7,6 @@ html{
 body{
     font-size: 1.4em;
     margin: 0;
-}
-//The entire template for the page header as nested id's.
-#tempHeader{
-    color: $NIGHTFALL;
-    text-align: center;
-    font-family: $fontHeadings;
-    letter-spacing: $LSpace;
-    font-size: 1.3em;
-    margin-top: .5em;
-
-  #tempPageTitle{
-    font-size: 3.0em;
-  }
-  #tempAuthor{
-    font-size: 2.0em;
-    margin-top: .5em;
-  }
-  #tempLogoTable{
-    width: 100%;
-    border: none;
-
-    #tempLogoTableLeft {
-      width: 45%;
-      padding-left: 5%;
-      padding-top: 30px;
-    }
-    #tempLogoTableCenter{
-      width: 10%;
-      #logoImg{
-        width: 3.5vmax;
-        height: auto;
-      }
-    }
-    #tempLogoTableRight {
-      width: 45%;
-      padding-right: 5%;
-      padding-top: 30px;
-    }
-    hr.flared {
-      height: 30px;
-      border-style: solid;
-      border-color: $NIGHTFALL;
-      border-width: 3px 0 0 0;
-      border-radius: 20px;
-      overflow: visible;
-    }
-    hr.flared:before {
-      display: block;
-      content: "";
-      height: 30px;
-      margin-top: -33px;
-      border-style: solid;
-      border-color: $NIGHTFALL;
-      border-width: 0 0 3px 0;
-      border-radius: 20px;
-    }
-  }
 }
 #colorDisplay{
     font-family: $fontBody;
