--- a/_templateProjectPageHeader.scss
+++ b/_templateProjectPageHeader.scss
@@ -1,4 +1,4 @@
-@import "globalVariables";
+@import "_globalVariables";
 //The entire template for the page header as nested id's.
 #tempHeader{
   color: $NIGHTFALL;
