All files previously unsubmitted are now submitted.

--- a/_templateProjectPageHeader.scss
+++ b/_templateProjectPageHeader.scss
@@ -1,4 +1,4 @@
-@import "_globalVariables";
+@import "globalVariables";
 //The entire template for the page header as nested id's.
 #tempHeader{
   color: $NIGHTFALL;
