--- a/_globalVariables.scss
+++ b/_globalVariables.scss
@@ -1,4 +1,4 @@
-@import "_normalize";
+@import "normalize";
 @import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates:400,700');
 
 @font-face {
