--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,4 @@
-@import "templateProjectPageHeader";
+@import "../styles/templateProjectPageHeader";
 html{
     background-color: $HEATWAVE;
     font-family: $fontBody;
