Refactored CSS for home page.

--- a/styles.css
+++ b/styles.css
@@ -415,4 +415,4 @@ button:hover {
   color: white;
   background-color: #F5AB99; }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=styles_quotes.csstes.css.map */
